fixed delete btn, title visibility, logout btn

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,8 +52,9 @@ body {
 
 #chooseBook {
   text-align: center;
-  color: #cb8d18;
-  font-size: xx-large
+  color: #333332;
+  font-size: xx-large;
+  padding-top: 2%; 
 }
 
 .login a {
@@ -104,8 +105,13 @@ h2 {
 }
 
 h4 {
-  height: 7vh;
-  margin: 0;
+  height: 6vh;
+  margin: auto;
+  background-color: #f3a61760;
+padding-top: 15%;
+ 
+ 
+  
 }
 
 /* burger menu styling */
@@ -216,18 +222,20 @@ h4 {
   margin-left: -20px;
   width: 40px;
   height: 40px;
-
-
+}
+.arrow img{
+  position: relative;
+  bottom: -9rem;
+  left: 50%;
+  margin-left: -20px;
+  width: 40px;
+  height: 40px;
+  animation: bounce 2s infinite;
+}
   /**
    * Dark Arrow Down
    */
-  background-image: url(https://static1.squarespace.com/static/5e78f290575a6321739eba41/t/5ec8625c6dad0e25fa5a8234/1590190684880/Arrow.png);
-  background-size: contain;
-}
 
-.bounce {
-  animation: bounce 2s infinite;
-}
 
 @keyframes bounce {
 
@@ -285,6 +293,19 @@ button {
 
 }
 
+#logoutBtn{
+margin: unset;
+padding: unset;
+font-size: large;
+color: white;
+
+}
+
+.deleteBtn{
+background-color: #d11a2a;
+margin:unset;
+
+}
 .editTitle {
   text-align: center;
   color: rgb(252, 252, 252);
@@ -324,4 +345,8 @@ button {
 .favorites-list form {
   margin-block-end: 0;
 }
-
+.favorites-list a{
+  color: #a7a7a7;
+  text-shadow: white; 
+  text-decoration: underline;
+}
